[workspace]
members = [
    "blake2",
    "gost94",
    "groestl",
    "k12",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha1",
    "sha2",
    "sha3",
    "shabal",
    "streebog",
    "whirlpool",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
md5-asm = { git = "https://github.com/RustCrypto/asm-hashes", branch = "blocks_proc" }
sha1-asm = { git = "https://github.com/RustCrypto/asm-hashes", branch = "blocks_proc" }
sha2-asm = { git = "https://github.com/RustCrypto/asm-hashes", branch = "blocks_proc" }
whirlpool-asm = { git = "https://github.com/RustCrypto/asm-hashes", branch = "blocks_proc" }
digest = { git = "https://github.com/RustCrypto/traits", branch = "digest/variable" }
