[workspace]
members = [
    "blake2",
    "gost94",
    "groestl",
    "k12",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha1",
    "sha2",
    "sha3",
    "shabal",
    "streebog",
    "tiger",
    "whirlpool",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
digest = { git = "https://github.com/RustCrypto/traits", branch = "common" }
