[workspace]
members = [
    "fsb",
    "blake2",
    "gost94",
    "groestl",
    "k12",
    "md2",
    "md4",
    "md5",
    "ripemd",
    "sha1",
    "sha2",
    "sha3",
    "shabal",
    "sm3",
    "streebog",
    "tiger",
    "whirlpool",
]

[profile.dev]
opt-level = 2

[patch.crates-io]
digest = { git = "https://github.com/RustCrypto/traits" }
crypto-mac = { git = "https://github.com/RustCrypto/traits" }
block-buffer = { git = "https://github.com/RustCrypto/utils" }
