[package]
name = "fsb"
description = "FSB hash function"
version = "0.10.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "fsb", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
whirlpool = { version = "0.10", path = "../whirlpool", default-features = false }
digest = { version = "0.10.0-pre.3", features = ["core-api", "block-padding"] }

[dev-dependencies]
hex-literal = "0.2"
digest = { version = "0.10.0-pre.3", features = ["dev"] }

[features]
default = ["std"]
std = ["digest/std"]
