[package]
name = "fsb"
description = "FSB hash function"
version = "0.10.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "fsb", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.10", features = ["block-padding"] }
whirlpool = { version = "0.10", path = "../whirlpool", default-features = false }

[dev-dependencies]
digest = { version = "0.10", features = ["dev"] }
hex-literal = "0.2"

[features]
default = ["std"]
std = ["digest/std"]
